--- a/EightModule/ProfileSample/ProfileSample/Views/Home/Index.cshtml
+++ b/EightModule/ProfileSample/ProfileSample/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Web.UI.WebControls
-@model IEnumerable<ProfileSample.Models.ImageModel>
+﻿@model IEnumerable<ProfileSample.Models.ImageModel>
 
 @{
     ViewBag.Title = "title";
