--- a/EightModule/ProfileSample/ProfileSample/Views/Home/Index.cshtml
+++ b/EightModule/ProfileSample/ProfileSample/Views/Home/Index.cshtml
@@ -1,16 +1,20 @@
-﻿@model IEnumerable<ProfileSample.Models.ImageModel>
-
-@{
+﻿@{
     ViewBag.Title = "title";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row">
-    @foreach (var item in Model)
-    {
-        var converted = Convert.ToBase64String(item.Data);
-        var imgSrc = string.Format("data:image/jpg;base64,{0}", converted);
+<h2>@ViewBag.Title.</h2>
+<h3>@ViewBag.Message</h3>
 
-        <img src="@imgSrc" width="300" height="150"/>
-    }
+<div class="row">
+    <div class="row">
+        <div class="form-group">
+            <input class="form-control" type="text" id="search-phrase" />
+        </div>
+        <div class="form-group">
+            <input class="btn btn-primary" type="button" value="Search!" onclick="refresh()" />
+        </div>
+    </div>
+
+    <div id="results" class="row"></div>
 </div>
