--- a/EightModule/ProfileSample/ProfileSample/Views/Images/Upload.cshtml
+++ b/EightModule/ProfileSample/ProfileSample/Views/Images/Upload.cshtml
@@ -1,11 +1,17 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "Upload";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 <h3>@ViewBag.Message</h3>
 
-@using (Html.BeginForm("Upload", "Home", FormMethod.Post, new { enctype = "multipart/form-data" })) {
-    <input type="file" name="upload" id="upload" />
-    <input type="submit" value="Upload!" />
+@using (Html.BeginForm("Upload", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
+{
+    <div class="form-group">
+        <label for="upload">Select your file</label>
+        <input type="file" name="upload" id="upload" />
+    </div>
+    <div class="form-group">
+        <input type="submit" value="Upload!" class="btn btn-primary" />
+    </div>
 }
