--- a/EightModule/ProfileSample/ProfileSample/Views/Images/Upload.cshtml
+++ b/EightModule/ProfileSample/ProfileSample/Views/Images/Upload.cshtml
@@ -5,7 +5,7 @@
 <h2>@ViewBag.Title</h2>
 <h3>@ViewBag.Message</h3>
 
-@using (Html.BeginForm("Upload", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm("Upload", "Images", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     <div class="form-group">
         <label for="upload">Select your file</label>
